# agentpeek

./: .gitignore  CLAUDE.md  MEMORY.md  PROJECT.md  README.md  demo.sh  demo_video.py  pyproject.toml  test_simulation.py
.claude/: settings.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  app.css  types.ts
frontend/src/components/: AgentNode.tsx  AgentTypeTrend.tsx  BaselineCard.tsx  DetailPanel.tsx  GanttView.tsx  HistoryView.tsx  InsightsView.tsx  LiveOutput.tsx  ReplayView.tsx  SessionHistory.tsx  SessionTabs.tsx  TopBar.tsx  TopologyView.tsx  ViewTabs.tsx
frontend/src/hooks/: useAgentState.ts  useBaselines.ts  useHistory.ts
frontend/src/utils/: colors.ts  format.ts
poc/: dashboard.html  fake_agent_team.py  mock_data.py  proxy_server.py  server.py
src/agentpeek/: __init__.py  __main__.py  baselines.py  cli.py  db.py  hooks.py  models.py  processor.py  scorer.py  server.py  tailer.py
src/agentpeek/static/: index.html
src/agentpeek/static/assets/: index-2A_I32k3.js  index-BqxG2XfS.js  index-C3yB7Qlu.js  index-CCgMI0Le.css  index-CQNDUd5b.js  index-CmnQ45zp.js  index-Csfv4LGh.js  index-CtiwTqAz.js  index-CyZagNVy.js  index-D0rt3X0U.js  index-DG3ZhUqj.js  index-DRIcYpAj.js  index-DRLAdbpc.js  index-DsT7tGbR.css  index-DywNysD7.js  index-VLZiTLjd.js  index-vfiT2OWL.js
