[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpeek"
version = "0.1.0"
description = "Real-time observability dashboard for Claude Code agent sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
    "click>=8.0",
]

[project.scripts]
agentpeek = "agentpeek.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpeek"]
